commit all for backup

--- a/src/app.yaml
+++ b/src/app.yaml
@@ -3,8 +3,9 @@ version: 1-01
 runtime: python
 api_version: 1
 
-derived_file_type:
-- python_precompiled
+builtins:
+- remote_api: on
+- appstats: on
 
 handlers:
 
