--- a/src/index.yaml
+++ b/src/index.yaml
@@ -27,6 +27,14 @@ indexes:
 - kind: BlogPost
   properties:
   - name: category
+  - name: state
+  - name: static
+  - name: creation_date
+    direction: desc
+
+- kind: BlogPost
+  properties:
+  - name: category
   - name: static
   - name: creation_date
     direction: desc
