update widget manage app

--- a/src/index.yaml
+++ b/src/index.yaml
@@ -85,3 +85,8 @@ indexes:
   - name: role
   - name: creation_date
     direction: desc
+
+- kind: WidgetInstance
+  properties:
+  - name: sidebar
+  - name: display_order
